snapshot-tests/tests/snapshots/parser__bad_strings__unterminated_literal.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated_literal:1:8
  │
1 │ foo = '
  │        ^ expected `'`
